@@ -12,9 +12,8 @@
  *******************************************************************************/
 
 import { diagramFragment } from './diagramFragment';
-import { GraphQLNodeStyleFragment } from './nodeFragment.types';
 
-export const diagramEventSubscription = (contributions: GraphQLNodeStyleFragment[]) => `
+export const diagramEventSubscription = `
 subscription diagramEvent($input: DiagramEventInput!) {
   diagramEvent(input: $input) {
     ... on ErrorPayload {
@@ -35,5 +34,5 @@ subscription diagramEvent($input: DiagramEventInput!) {
   }
 }
 
-${diagramFragment(contributions)}
+${diagramFragment}
 `;
