@@ -10,9 +10,8 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-import { GraphQLNodeStyleFragment } from './nodeFragment.types';
 
-export const nodeFragment = (contributions: GraphQLNodeStyleFragment[]) => `
+export const nodeFragment = `
 fragment nodeFragment on Node {
   id
   type
@@ -48,14 +47,6 @@ fragment nodeFragment on Node {
     ... on IconLabelNodeStyle {
       background
     }
-     ${contributions.map(
-       (nodeStyle) =>
-         `
-    ... on ${nodeStyle.type} {
-      ${nodeStyle.fields}
-    }
-    `
-     )}
   }
   childrenLayoutStrategy {
     __typename
